--- a/index.html
+++ b/index.html
@@ -15,55 +15,55 @@
             <p class="image-credit">Photo taken by Lena Polishko.</p>
         </div>
 
-
         <div id="form-container">
-            <h2>Reach for the stars</h2>
+            <div class="form-header">
+                <h1>Chase The Peak</h1>
+                <p class="header-text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+                <p class="header-text">You know you want to.</p>
+            </div>
 
-            <h1>Get Started</h1>
-            <div class="input-container">
-                <label for="first-name"></label>
-                <input type="text" name="first-name" id="first-name" required>
-                <span>FIRST NAME</span>
+            <div class="form-input">
+                <h1>Get Started</h1>
+                <form id="my-form" novalidate>
+                    <label for="first-name">FIRST NAME
+                        <input type="text" name="first-name" id="first-name" required>
+                        <div class="error-message" id="first-error"></div>
+                    </label>
+                    <label for="last-name">LAST NAME
+                        <input type="text" name="last-name" id="last-name" required>
+                        <div class="error-message" id="last-error"></div>
+                    </label>
+                    <label for="email">E-MAIL
+                        <input type="email" name="email" id="email" required>
+                        <div class="error-message" id="email-error"></div>
+                    </label>
+                    <label for="number">PHONE NUMBER
+                        <input type="tel" name="number" id="number" required>
+                        <div class="error-message" id="number-error"></div>
+                    </label>
+                    <label for="user-password">PASSWORD
+                        <input type="password" name="user-password" id="user-password" class="user-password" required>
+                        <div class="error-message" id="pass-error"></div>
+                    </label>
+                    <label for="user-password-confirm">CONFIRM PASSWORD
+                        <input type="password" name="user-password-confirm" id="user-password-confirm" class="user-password" required>
+                        <div class="error-message" id="passConfirm-error"></div>
+                    </label>
+                </form>
             </div>
-            <div class="input-container">
-                <label for="last-name"></label>
-                <input type="text" name="last-name" id="last-name" required>
-                <span>LAST NAME</span>
-            </div>
-            <div class="input-container">
-                <label for="email"></label>
-                <input type="email" name="email" id="email" required>
-                <span>E-MAIL</span>
-            </div>
-            <div class="input-container">
-                <label for="number"></label>
-                <input type="tel" name="number" id="number" required>
-                <span>PHONE NUMBER</span>
-            </div>
-            <div class="input-container">
-                <label for="user-password"></label>
-                <input type="password" name="user-password" id="user-password" class="user-password" required>
-                <span>PASSWORD</span>
-            </div>
-            <div class="input-container">
-                <label for="user-password-confirm"></label>
-                <input type="password" name="user-password-confirm" id="user-password-confirm" class="user-password" required>
-                <span>CONFIRM PASSWORD</span>
-            </div>
+
 
             <div class="submit-container">
-                <button type="submit" class="submit">Create Account</button>
-                <p>Already have an account...?</p>
-                <span>LOG IN</span>
+                <button type="submit" class="submit" form="my-form">CREATE ACCOUNT</button>
+                <p>ALREADY HAVE AN ACCOUNT? <a href>LOG IN</a></p>
             </div>
-    
-        </div>
 
-    
+        </div>
     </div>
 
     <script src="scripts.js"></script>
 
 </body>
+
 </html>
 
